--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-external-storage-permission": "^1.0.0",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
