--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "moment": "^2.30.1",
     "react": "19.1.0",
     "react-native": "0.81.1",
