--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.30.1",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-async-storage-devtools": "^1.0.6",
     "react-native-external-storage-permission": "^1.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^5.5.2"
