--- a/ios/commuflonemubatterystats.xcodeproj/xcshareddata/xcschemes/commuflonemubatterystats.xcscheme
+++ b/ios/commuflonemubatterystats.xcodeproj/xcshareddata/xcschemes/commuflonemubatterystats.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "MuBatteryStats.app"
-               BlueprintName = "MuBatteryStats"
-               ReferencedContainer = "container:MuBatteryStats.xcodeproj">
+               BuildableName = "commuflonemubatterystats.app"
+               BlueprintName = "commuflonemubatterystats"
+               ReferencedContainer = "container:commuflonemubatterystats.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MuBatteryStatsTests.xctest"
-               BlueprintName = "MuBatteryStatsTests"
-               ReferencedContainer = "container:MuBatteryStats.xcodeproj">
+               BuildableName = "commuflonemubatterystatsTests.xctest"
+               BlueprintName = "commuflonemubatterystatsTests"
+               ReferencedContainer = "container:commuflonemubatterystats.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MuBatteryStats.app"
-            BlueprintName = "MuBatteryStats"
-            ReferencedContainer = "container:MuBatteryStats.xcodeproj">
+            BuildableName = "commuflonemubatterystats.app"
+            BlueprintName = "commuflonemubatterystats"
+            ReferencedContainer = "container:commuflonemubatterystats.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MuBatteryStats.app"
-            BlueprintName = "MuBatteryStats"
-            ReferencedContainer = "container:MuBatteryStats.xcodeproj">
+            BuildableName = "commuflonemubatterystats.app"
+            BlueprintName = "commuflonemubatterystats"
+            ReferencedContainer = "container:commuflonemubatterystats.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
